<resources>
    <string name="app_name">StoryApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_label">Hi, Welcome to</string>
    <string name="login_label">Login</string>
    <string name="email_warning">invalid e-mail</string>
    <string name="email_hint">enter your email</string>
    <string name="password_validation">password must at least 8 character</string>
    <string name="password_hint">enter your password</string>
    <string name="register_label">Register</string>
    <string name="name_hint">enter your name</string>
    <string name="register_question">Don\'t Have an Account?</string>
    <string name="login_question">Already Have an Account?</string>
    <string name="required_field">This field is required</string>
    <string name="success_register">User Account Created</string>
    <string name="justNow">Just Now</string>
    <string name="username">Username</string>
    <string name="seconds">seconds ago</string>
    <string name="minutes">minutes ago</string>
    <string name="hours">hours ago</string>
    <string name="days">days ago</string>
    <string name="desc">Story Description</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="cameraX">camera</string>
    <string name="gallery">gallery</string>
    <string name="camera_permission">Permission Decline</string>
    <string name="camera_failed">Failed to Load Camera</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_profile">Profile</string>
    <string name="menu_title_blank" />
    <string name="upload">upload</string>
    <string name="add_story">add story</string>
    <string name="image_failed">Failed to Take Picture</string>
    <string name="unauthorized">Unauthorized, please re-login</string>
    <string name="image_size_warning">The maximum image size is 1 MB</string>
    <string name="success_upload">Story already uploaded</string>
    <string name="setting">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="change_night_mode">Change Mode</string>
    <string name="logout">logout</string>
    <string name="email">email</string>
    <string name="userId">user-xxxxxxx</string>
    <string name="take_photo">Take a Photo</string>
    <string name="switch_camera">Switch The Camera</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Show Maps</string>
    <string name="title_activity_set_location">SetLocationActivity</string>
    <string name="set_location">Select Area to Set Location</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="input_location">please select the location</string>
    <string name="location">user location</string>
    <string name="retry">retry</string>
    <string name="select_location">set location</string>
    <string name="welcome">welcome</string>
    <string name="failed">"Failed: "</string>
    <string name="local">location</string>
    <string name="user_avatar">This is a User Avatar</string>
    <string name="user_photo">This is a User Picture</string>
    <string name="image_preview">This is a Image Preview</string>
    <string name="Timeout">Timeout</string>
</resources>