<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.DetailStoryActivity">

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/user_avatar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/astronaut" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:transitionName="name"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintStart_toEndOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/tv_uploadTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:transitionName="time"
            app:layout_constraintBottom_toBottomOf="@+id/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/avatar"
            tools:text="@string/justNow" />

        <ImageView
            android:id="@+id/iv_story"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/user_photo"
            android:scaleType="centerCrop"
            android:transitionName="story"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/story_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/iv_story"
            app:layout_constraintTop_toBottomOf="@+id/iv_story"
            tools:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pin_drop_24"
                app:tint="@color/blush_pink" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:layout_editor_absoluteX="16dp"
                tools:text="@string/location" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/story_location"
            tools:layout_editor_absoluteX="10dp"
            tools:text="@string/desc" />

        <include
            android:id="@+id/loading"
            layout="@layout/loading_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>