<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.UploadActivity">

    <ImageView
        android:id="@+id/preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image_preview"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_place_holder" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/set_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_cameraX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blush_pink"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="@string/cameraX" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/blush_pink"
            android:text="@string/gallery" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_story_desc"
        android:backgroundTint="@color/blush_pink"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/story_location"
        app:layout_constraintStart_toStartOf="@+id/preview">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location_set" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/select_location"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/clear_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_close_24"
        app:layout_constraintBottom_toTopOf="@+id/story_location"
        app:layout_constraintEnd_toEndOf="@+id/story_location" />

    <TextView
        android:id="@+id/story_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_story_desc"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="2dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/edt_desc"
        app:layout_constraintStart_toStartOf="@+id/set_location"
        tools:text="@string/set_location" />

    <com.example.storyapp.customView.EditTextDesc
        android:id="@+id/edt_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_story_desc"
        android:gravity="start"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_upload"
        app:layout_constraintEnd_toEndOf="@+id/preview"
        app:layout_constraintStart_toStartOf="@+id/preview"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/blush_pink"
        android:elevation="2dp"
        android:scaleType="fitCenter"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_desc"
        app:layout_constraintStart_toStartOf="@+id/edt_desc" />

    <include
        android:id="@+id/loading"
        layout="@layout/loading_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>