<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:padding="16dp">

        <ImageView
            android:id="@+id/icon_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_black_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_toEndOf="@+id/icon_location"
            android:text="@string/set_location"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon_location"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SpeakableTextPresentCheck"
            android:text="@string/set_location" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/tv_loc"
            android:layout_marginBottom="10dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/blush_pink"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_toEndOf="@id/cancel_button"
            android:backgroundTint="@color/blush_pink"
            android:text="@string/save" />
    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SetLocationActivity"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="270dp" />
</LinearLayout>
